# alembic

./: .gitignore  CODEOWNERS  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml
src/: handler.rs  lib.rs  logging.rs  main.rs  message.rs  utils.rs
src/sinks/: base.rs  filesink.rs  mod.rs  stderr.rs  stdoutsink.rs
tests/: integrations.rs
