[package]
name = "alembic-log"
version = "0.1.3"
edition = "2021"
repository = "https://github.com/mnowzari/alembic"
homepage = "https://github.com/mnowzari/alembic"
readme = "./README.md"
description = "A Rust crate that lets you log once, send anywhere."
license = "Apache-2.0"

[dependencies]
chrono = "0.4.41"
